--- a/Links.html
+++ b/Links.html
@@ -2,13 +2,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <title>Happy Embedding</title>
 </head>
+<body>
   <h3>Engagement</h3>
     <a href="etoro://discover/markets">discover/markets</a><br/>
     <a href="etoro://discover/people">discover/people</a><br/>
@@ -30,8 +26,6 @@
     <a href="etoro://en/embed/sign-up?hostedby=http%3A%2F%2Fetoro-production.s3.amazonaws.com%2Fweb-client%2Ftests%2Fregistration%2
     Fprod-006%2FregEmbed.html&hideSocialToa=false&hideSocialWechat=false&hideSocialFacebook=false
     &hideSocialGoogle=false&hideSocialApple=false&hideSocialConnect=false&funnelFromId=13">en/embed/sign-up?hostedby</a><br/>
-
-<body>
   
 </body>
 </html>
